<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.intranda.goobi.plugins.step</groupId>
  <artifactId>representative-creation</artifactId>
  <version>${goobi.pluginversion}</version>
  <packaging>jar</packaging>
  <properties>
    <goobi.pluginversion>0.0.1-SNAPSHOT</goobi.pluginversion>
    <jar.name>plugin_intranda_step_representative-creation</jar.name>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <goobi.version>23.02</goobi.version>
  </properties>
  <url>http://maven.apache.org</url>
  <distributionManagement>
    <repository>
      <id>intranda-releases</id>
      <url>https://nexus.intranda.com/repository/maven-releases</url>
    </repository>
  </distributionManagement>
  <repositories>
    <repository>
      <id>intranda-public</id>
      <url>https://nexus.intranda.com/repository/maven-public</url>
    </repository>
  </repositories>
  <build>
    <finalName>${jar.name}</finalName>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>resources/</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <goals>
              <goal>revision</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <commitIdGenerationMode>flat</commitIdGenerationMode>
          <gitDescribe>
            <skip>true</skip>
          </gitDescribe>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.4</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <shortRevisionLength>10</shortRevisionLength>
          <doCheck>false</doCheck>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Build-Time>${maven.build.timestamp}</Build-Time>
            </manifestEntries>
            <manifestSections>
              <manifestSection>
                <name>Versions</name>
                <manifestEntries>
                  <Implementation-Version>${project.version}</Implementation-Version>
                  <Implementation-SCM-Revision>${buildNumber}</Implementation-SCM-Revision>
                  <Implementation-SCM-Branch>${scmBranch}</Implementation-SCM-Branch>
                  <Goobi-Version>${goobi.version}</Goobi-Version>
                </manifestEntries>
              </manifestSection>
            </manifestSections>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>de.intranda.goobi.workflow</groupId>
      <artifactId>goobi-core-jar</artifactId>
      <version>${goobi.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.6</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>[4.13.1,)</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <scm>
    <url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-metscreation.git</url>
    <connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-metscreation.git</connection>
  </scm>
</project>
